--- a/projects/VC100/SimGear.vcxproj
+++ b/projects/VC100/SimGear.vcxproj
@@ -225,6 +225,7 @@
     <ClCompile Include="..\..\simgear\misc\texcoord.cxx" />
     <ClCompile Include="..\..\simgear\misc\zfstream.cxx" />
     <ClCompile Include="..\..\simgear\misc\ResourceManager.cxx" />
+    <ClCompile Include="..\..\simgear\props\propertyObject.cxx" />
     <ClCompile Include="..\..\simgear\route\route.cxx" />
     <ClCompile Include="..\..\simgear\route\waypoint.cxx" />
     <ClCompile Include="..\..\simgear\scene\material\mipmap.cxx" />
@@ -427,6 +428,7 @@
     <ClInclude Include="..\..\simgear\misc\texcoord.hxx" />
     <ClInclude Include="..\..\simgear\misc\zfstream.hxx" />
     <ClInclude Include="..\..\simgear\misc\ResourceManager.hxx" />
+    <ClInclude Include="..\..\simgear\props\propertyObject.hxx" />
     <ClInclude Include="..\..\simgear\route\route.hxx" />
     <ClInclude Include="..\..\simgear\route\waypoint.hxx" />
     <ClInclude Include="..\..\simgear\scene\material\mipmap.hxx" />
