--- a/simgear/CMakeLists.txt
+++ b/simgear/CMakeLists.txt
@@ -23,7 +23,7 @@ foreach( mylibfolder
 
 endforeach( mylibfolder )
 
-if (${SIMGEAR_HEADLESS})
+if (NOT SIMGEAR_HEADLESS)
     add_subdirectory(environment)
     add_subdirectory(screen)
     add_subdirectory(scene)
@@ -38,9 +38,12 @@ install (FILES ${HEADERS}  DESTINATION include/simgear/)
 if(SIMGEAR_SHARED)
     message(STATUS "building shared library")
     get_property(allSources DIRECTORY PROPERTY ALL_SOURCES)
-    add_library(SimGear SHARED ${allSources})
-    set_property(TARGET SimGear PROPERTY FRAMEWORK)
+	get_property(publicHeaders DIRECTORY PROPERTY PUBLIC_HEADERS)
 
+    add_library(SimGear SHARED ${allSources})
+    set_property(TARGET SimGear PROPERTY FRAMEWORK 1)
+	set_property(TARGET SimGear PROPERTY PUBLIC_HEADERS ${publicHeaders})
+	
     target_link_libraries(SimGear ${ZLIB_LIBRARY} ${OPENSCENEGRAPH_LIBRARIES})
 endif(SIMGEAR_SHARED)
     
