--- a/simgear/screen/CMakeLists.txt
+++ b/simgear/screen/CMakeLists.txt
@@ -4,17 +4,19 @@ set(HEADERS
     colors.hxx
     extensions.hxx
     screen-dump.hxx
+	tr.h
     )
 
 
 set(SOURCES 
     extensions.cxx
     screen-dump.cxx
+	tr.cxx
     )
 
 if(${JPEG_FACTORY})
     set(HEADERS "${HEADERS} jpgfactory.hxx")
-    set(SOURCES "${SOURCES} jpgfactory.cxx tr.cxx")
+    set(SOURCES "${SOURCES} jpgfactory.cxx")
 endif()
 
 
