MSVC improvements from Olaf Flebbe.

--- a/simgear/threads/CMakeLists.txt
+++ b/simgear/threads/CMakeLists.txt
@@ -5,6 +5,10 @@ set(HEADERS
     SGQueue.hxx
     SGThread.hxx)
 
-set(SOURCES SGThread.cxx)
 
-simgear_component(threads threads "${SOURCES}" "${HEADERS}")
+if (MSVC)
+  install (FILES ${HEADERS}  DESTINATION include/simgear/threads)
+else (MSVC)
+  set(SOURCES SGThread.cxx)
+  simgear_component(threads threads "${SOURCES}" "${HEADERS}")
+endif(MSVC)
