--- a/simgear/simgear_config_cmake.h.in
+++ b/simgear/simgear_config_cmake.h.in
@@ -10,6 +10,7 @@
 #cmakedefine HAVE_RINT
 #cmakedefine HAVE_TIMEGM
 #cmakedefine HAVE_ISNAN
+#cmakedefine HAVE_WINDOWS_H
 
 // set if building headless (no OSG or OpenGL libs)
 #cmakedefine NO_OPENSCENEGRAPH_INTERFACE
