Use tiedpropertylist.hxx in cmake and vc90

--- a/projects/VC90/SimGear.vcproj
+++ b/projects/VC90/SimGear.vcproj
@@ -1016,6 +1016,9 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\simgear\props\tiedpropertylist.hxx"
+				>
+			<File
 				RelativePath="..\..\simgear\props\props.cxx"
 				>
 			</File>
