Darn! Typo in vc90 project file

--- a/projects/VC90/SimGear.vcproj
+++ b/projects/VC90/SimGear.vcproj
@@ -1018,6 +1018,7 @@
 			<File
 				RelativePath="..\..\simgear\props\tiedpropertylist.hxx"
 				>
+			</File>
 			<File
 				RelativePath="..\..\simgear\props\props.cxx"
 				>
