--- a/simgear/environment/Makefile.am
+++ b/simgear/environment/Makefile.am
@@ -2,8 +2,8 @@ includedir = @includedir@/environment
 
 lib_LIBRARIES = libsgenvironment.a
 
-include_HEADERS = metar.hxx visual_enviro.hxx precipitation.hxx
+include_HEADERS = metar.hxx precipitation.hxx
 
-libsgenvironment_a_SOURCES = metar.cxx visual_enviro.cxx precipitation.cxx
+libsgenvironment_a_SOURCES = metar.cxx precipitation.cxx
 
 INCLUDES = -I$(top_srcdir)
