Also remove visual_enviro.cxx from the cmake build system.

--- a/simgear/environment/CMakeLists.txt
+++ b/simgear/environment/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 include (SimGearComponent)
 
-set(HEADERS metar.hxx visual_enviro.hxx precipitation.hxx)
-set(SOURCES metar.cxx visual_enviro.cxx precipitation.cxx)
+set(HEADERS metar.hxx precipitation.hxx)
+set(SOURCES metar.cxx precipitation.cxx)
 
 simgear_component(environment environment "${SOURCES}" "${HEADERS}")
