--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,11 @@ INSTALL
 SimGear.spec
 *.o
 lib*.a
+cmake_install.cmake
+CMakeFiles
+CMakeCache.txt
+CPackConfig.cmake
+CPackSourceConfig.cmake
+cmake_uninstall.cmake
+install_manifest.txt
+
