--- a/configure.ac
+++ b/configure.ac
@@ -540,6 +540,39 @@ if test "x$ac_cv_header_zlib_h" != "xyes"; then
     echo
 fi
 
+dnl Check for Subversion library support
+# libsvn support defaults to yes
+save_LIBS=$LIBS
+save_CPPFLAGS=$CPPFLAGS
+AC_ARG_WITH(libsvn, [  --without-libsvn        Do not use built-in subversion (libsvn) for simgear [default=no]], [], [with_libsvn=yes])
+if test "x$with_libsvn" = "xyes"; then
+    LIBS="`apr-1-config --link-ld`"
+    CPPFLAGS="-I/usr/include/subversion-1 `apr-1-config --includes --cppflags`"
+    AC_CHECK_HEADERS([svn_client.h])
+       if test "x$ac_cv_header_svn_client_h" = "xyes"; then
+	echo "Using built-in subversion (libsvn) for scenery downloads."
+	AC_SEARCH_LIBS(svn_client_checkout, svn_client-1,
+	               [AC_DEFINE([HAVE_LIBSVN_CLIENT_1], [1], [Define to 1 if you have libsvn_client-1])],
+	               [AC_MSG_ERROR(svn_client-1 library not found.)],)
+	AC_SEARCH_LIBS(svn_cmdline_init, svn_subr-1, , [AC_MSG_ERROR(svn_subr-1 library not found.)],)
+	AC_SEARCH_LIBS(svn_ra_initialize, svn_ra-1, , [AC_MSG_ERROR(svn_ra-1 library not found.)],)
+	svn_LIBS=$LIBS
+	svn_CPPFLAGS=$CPPFLAGS
+	AC_SUBST(svn_LIBS)
+	AC_SUBST(svn_CPPFLAGS)
+       else
+	echo "Libsvn not found. Will use command line subversion for scenery downloads."
+	svn_LIBS=""
+	svn_CPPFLAGS=""
+       fi
+else
+echo "Libsvn explicitly disabled. Will use command line subversion for scenery downloads."
+  svn_LIBS=""
+  svn_CPPFLAGS=""
+fi
+LIBS=$save_LIBS
+CPPFLAGS=$save_CPPFLAGS
+
 dnl Checks for header files.
 AC_HEADER_STDC
 AC_CHECK_HEADERS( \
@@ -596,6 +629,7 @@ AC_CONFIG_FILES([ \
 	simgear/scene/sky/Makefile \
 	simgear/scene/tgdb/Makefile \
 	simgear/scene/util/Makefile \
+	simgear/scene/tsync/Makefile \
 	simgear/screen/Makefile \
 	simgear/serial/Makefile \
 	simgear/sound/Makefile \
