--- a/projects/VC90/SimGear.vcproj
+++ b/projects/VC90/SimGear.vcproj
@@ -1461,6 +1461,18 @@
 			</File>
 		</Filter>
 		<Filter
+			Name="Lib_sgtsync"
+			>
+			<File
+				RelativePath="..\..\simgear\scene\tsync\terrasync.cxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\simgear\scene\tsync\terrasync.hxx"
+				>
+			</File>
+		</Filter>
+		<Filter
 			Name="Lib_sgthread"
 			>
 			<File
