--- a/simgear/misc/CMakeLists.txt
+++ b/simgear/misc/CMakeLists.txt
@@ -33,3 +33,11 @@ set(SOURCES
     )
 
 simgear_component(misc misc "${SOURCES}" "${HEADERS}")
+
+add_executable(test_tabbed_values tabbed_values_test.cxx)
+add_test(tabbed_values ${EXECUTABLE_OUTPUT_PATH}/test_tabbed_values)
+target_link_libraries(test_tabbed_values sgmisc)
+
+add_executable(test_strings strutils_test.cxx )
+add_test(test_strings ${EXECUTABLE_OUTPUT_PATH}/test_strings)
+target_link_libraries(test_strings sgmisc)
