--- a/simgear/magvar/CMakeLists.txt
+++ b/simgear/magvar/CMakeLists.txt
@@ -5,3 +5,8 @@ set(HEADERS magvar.hxx coremag.hxx)
 set(SOURCES magvar.cxx coremag.cxx)
 
 simgear_component(magvar magvar "${SOURCES}" "${HEADERS}")
+
+
+add_executable(test_magvar testmagvar.cxx )
+target_link_libraries(test_magvar sgmagvar)
+
