Fix case of SGGeometryTest.cxx

--- a/simgear/math/CMakeLists.txt
+++ b/simgear/math/CMakeLists.txt
@@ -49,6 +49,6 @@ add_executable(math_test SGMathTest.cxx)
 target_link_libraries(math_test sgmath sgstructure sgdebug)
 add_test(math ${EXECUTABLE_OUTPUT_PATH}/math_test)
 
-add_executable(geometry_test SGGeometrytest.cxx)
+add_executable(geometry_test SGGeometryTest.cxx)
 target_link_libraries(geometry_test sgmath sgstructure sgdebug)
 add_test(geometry ${EXECUTABLE_OUTPUT_PATH}/geometry_test)
