--- a/simgear/Makefile.am
+++ b/simgear/Makefile.am
@@ -4,7 +4,7 @@ else
 HLA_DIR =
 endif
 
-EXTRA_DIST = simgear_config.h-msvc90 version.h.in
+EXTRA_DIST = hla simgear_config.h-msvc90 version.h.in
 
 include_HEADERS = \
 	compiler.h constants.h sg_inlines.h version.h
