--- a/simgear/environment/Makefile.am
+++ b/simgear/environment/Makefile.am
@@ -2,7 +2,7 @@ includedir = @includedir@/environment
 
 lib_LIBRARIES = libsgenvironment.a
 
-include_HEADERS = metar.hxx precipitation.hxx visual_enviro.hxx
+include_HEADERS = metar.hxx precipitation.hxx
 
 libsgenvironment_a_SOURCES = metar.cxx precipitation.cxx
 
