--- a/simgear/io/Makefile.am
+++ b/simgear/io/Makefile.am
@@ -15,7 +15,8 @@ include_HEADERS = \
 	sg_netChannel.hxx \
 	sg_netChat.hxx \
 	HTTPClient.hxx \
-	HTTPRequest.hxx
+	HTTPRequest.hxx \
+	HostLookup.hxx
 
 libsgio_a_SOURCES = \
 	iochannel.cxx \
@@ -30,7 +31,8 @@ libsgio_a_SOURCES = \
 	sg_netChannel.cxx \
 	sg_netChat.cxx \
 	HTTPClient.cxx \
-	HTTPRequest.cxx
+	HTTPRequest.cxx \
+	HostLookup.cxx
 
 INCLUDES = -I$(top_srcdir)
 
