Revert "Keep automake working, added new files"
This reverts commit a175033e3bb0c56cc0616ee224d6719a2896cec1.

--- a/simgear/io/Makefile.am
+++ b/simgear/io/Makefile.am
@@ -15,8 +15,7 @@ include_HEADERS = \
 	sg_netChannel.hxx \
 	sg_netChat.hxx \
 	HTTPClient.hxx \
-	HTTPRequest.hxx \
-	HostLookup.hxx
+	HTTPRequest.hxx
 
 libsgio_a_SOURCES = \
 	iochannel.cxx \
@@ -31,8 +30,7 @@ libsgio_a_SOURCES = \
 	sg_netChannel.cxx \
 	sg_netChat.cxx \
 	HTTPClient.cxx \
-	HTTPRequest.cxx \
-	HostLookup.cxx
+	HTTPRequest.cxx
 
 INCLUDES = -I$(top_srcdir)
 
